[metadata]
name = mastcasjobs
version = 0.0.4
description = An interface to MAST CasJobs.
long_description = file: README.rst
author = Richard L. White
author_email = rlw@stsci.edu
url = https://github.com/rlwastro/mastcasjobs
license = MIT
platform = OS Independent
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python

[options]
packages = mastcasjobs
python_requires = >=3.5
install_requires =
  requests
  casjobs @ git+https://github.com/dfm/casjobs@master#egg=casjobs
  astropy
zip_safe = False

